<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PsychAssist</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_contacts">View Contacts</string>
    <string name="activity_add_contact">Add Contact</string>
    <string name="add_first_name" >First Name</string>
    <string name="add_last_name" >Last Name</string>
    <string name="add_address" >Address</string>
    <string name="add_home_phone" >Home Phone</string>
    <string name="add_cell_phone" >Cell Phone</string>
    <string name="add_office_phone" >Office Phone</string>
    <string name="add_email" >Email</string>
    <string name="add_diagnosis" >Diagnosis</string>
    <string name="add_notes" >Notes</string>
    <string name="str_btn_add_contacts" >Add Contact</string>
    <string-array name="phone_array">
        <item>Home Phone</item>
        <item>Cell Phone</item>
        <item>Office Phone</item>
    </string-array>
</resources>
