<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   

    <EditText
        android:id="@+id/et__first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et__last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et__address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_address"
        android:inputType="textMultiLine"  
         android:lines="2"   />
<!-- <Spinner 
        android:id="@+id/et_phone_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
 -->
    <EditText
        android:id="@+id/et__home_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_home_phone"
        android:inputType="text" />

    <EditText
        android:id="@+id/et__cell_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_cell_phone"
        android:inputType="text" />

    <EditText
        android:id="@+id/et__office_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_office_phone"
        android:inputType="text" />

    <EditText
        android:id="@+id/et__email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_email"
        android:inputType="text" />

    <EditText
        android:id="@+id/et__diagnosis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_diagnosis"
        android:inputType="textMultiLine"
        android:lines="3"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/et__notes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_notes"
        android:inputType="textMultiLine"
        android:lines="5"
        android:scrollbars="vertical" />

        <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_add_contacts" />
        
<!-- <Button
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_view_contacts" /> -->        
    
</LinearLayout>